<resources>
    <string name="app_name">NoteTaking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="title">Note Taking</string>
    <string name="register">Register</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="Daftar">Daftar</string>
    <string name="welcome">Welcome, username!</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="belumPunyaAkun">Belum punya akun?</string>
    <string name="registerHere">Register here</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
</resources>